Loading Spinner Added

--- a/index.html
+++ b/index.html
@@ -8,33 +8,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">    <!-- Custom css -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
     integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="container">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
-    <div class="form-inline mt-3 d-flex justify-content-center">
-      <div class="input-group col-md-6 mb-2">
+    <div class="row mt-3 g-2 d-flex justify-content-center">
+      <div class="col-md-6">
         <input type="text" class="form-control" id="search" placeholder="nature">
       </div>
-      <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
+      <div class="col-auto">
+        <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
+      </div>
     </div>
     <section class="images">
-      <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
-        <h3 class="head-title text-center">Select image for create slider</h3>
-        <div class="input-group col-md-3 mb-2 mb-md-0">
+      <div class="row justify-content-center align-items-center mt-3 gallery-header mb-4">
+        <div class="col-auto">
+          <h3 class="head-title text-center">Select image for create slider</h3>
+        </div>
+        <div class="col-md-3">
           <input class="form-control" id="duration" placeholder="slider change duration">
         </div>
-        <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
+        <div class="col-auto">
+          <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
+        </div>
       </div>
-      <div class="row gallery">
 
+      <!-- spinner -->
+      <div id="loading-spinner" class="mt-5 d-flex justify-content-center d-none">
+        <div class="spinner-border text-warning" role="status"></div>
       </div>
+
+      <div id="image-container" class="row gallery"></div>
     </section>
     <!-- slider -->
     <div class="main">
