--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <section class="mt-5" id="sliders">
 
       </section>
+      <div class="d-flex mt-3 w-100 justify-content-center align-items-center bg-light">
+        <button id="pause-play-btn" type="button" class="btn btn-primary">Pause</button>
+      </div>
       <div class="dots d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
         <span class="dot" onclick="changeItem(-1)"></span>
         <span class="dot" onclick="changeItem(1)"></span>
