--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </section>
     <!-- slider -->
     <div class="main">
-      <section class="mt-5" id="sliders">
-
-      </section>
-      <div class="d-flex mt-3 w-100 justify-content-center align-items-center bg-light">
-        <button id="pause-play-btn" type="button" class="btn btn-primary">Pause</button>
-      </div>
-      <div class="dots d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
-        <span class="dot" onclick="changeItem(-1)"></span>
-        <span class="dot" onclick="changeItem(1)"></span>
+      <section class="mt-5" id="sliders"></section>
+      <div class="d-flex justify-content-between">
+        <div class="dots mx-5 d-flex mt-2 w-100 justify-content-center align-items-center bg-light">
+          <span class="dot" onclick="changeItem(-1)"></span>
+          <span class="dot" onclick="changeItem(1)"></span>
+        </div>
+        <div class="d-flex mx-5 mt-2 w-100 justify-content-center align-items-center bg-light">
+          <button id="pause-play-btn" type="button" class="btn btn-primary">Pause</button>
+        </div>
       </div>
     </div>
   </div>
